--- a/style.css
+++ b/style.css
@@ -18,4 +18,9 @@
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: 900;
 }
+
+.medium {
+  font-size: 20px;
+  padding: 8px;
+}
   
