--- a/style.css
+++ b/style.css
@@ -33,3 +33,15 @@
   font-size: 40px;
   padding: 15px;
 }
+
+.rotateleft {
+  transform: rotate(-5deg);
+}
+
+.rotateright {
+  transform: rotate(5deg);
+}
+
+.skewleft {
+  transform: skewX(10deg);
+}
