--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .newspaper {
   background-color: antiquewhite;
-  font-family: 'Times New Roman', Times, serif;
-  font-weight: bold;
+  font-family: Times New Roman, Times, serif;
+  font-weight: 700;
 }
 
 .magazine1 {
@@ -9,7 +9,7 @@
   color: white;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: 900;
-  text-transform: uppercase;  
+  text-transform: uppercase;
 }
 
 .magazine2 {
@@ -49,4 +49,3 @@
 .skewright {
   transform: skewX(-10deg);
 }
-  
