--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 .newspaper {
   background-color: antiquewhite;
-  font-family: 'Times New Roman', Times, serif;
-  font-weight: bold;
+  font-family: Times New Roman, Times, serif;
+  font-weight: 700;
 }
 
 .magazine1 {
@@ -36,16 +36,20 @@
 
 .rotateleft {
   transform: rotate(-5deg);
+  display: inline-block;
 }
 
 .rotateright {
   transform: rotate(5deg);
+  display: inline-block;
 }
 
 .skewleft {
   transform: skewX(10deg);
+  display: inline-block;
 }
 
 .skewright {
   transform: skewX(-10deg);
+  display: inline-block;
 }
