--- a/style.css
+++ b/style.css
@@ -3,6 +3,22 @@
   padding: 0;
 }
 
+#header {
+  margin-bottom: 20px;
+  padding: 10px;
+  text-align: center;
+  background-color: gray;
+  width: 100%;
+  height: 2rem;
+}
+
+#carta-contador {
+  margin: 20px;
+  padding: 10px;
+  font-size: 20px;
+  color: darkgray;
+}
+
 .newspaper {
   background-color: antiquewhite;
   font-family: 'Times New Roman', Times, serif;
