--- a/style.css
+++ b/style.css
@@ -11,3 +11,10 @@
   font-weight: 900;
   text-transform: uppercase;
 }
+
+.magazine2 {
+  background-image: 'images/pink-pattern.png';
+  color: fuchsia;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: 900;
+}
