--- a/style.css
+++ b/style.css
@@ -1,21 +1,21 @@
 .newspaper {
   background-color: antiquewhite;
-  font-family: "Times New Roman";
+  font-family: 'Times New Roman';
   font-weight: bold;
 }
 
 .magazine1 {
   background-color: teal;
   color: white;
-  font-family: "Verdana";
+  font-family: Verdana;
   font-weight: 900;
   text-transform: uppercase;
 }
 
 .magazine2 {
-  background-image: src="images/pink-pattern.png";
+  background-image: src='images/pink-pattern.png';
   color: fuchsia;
-  font-family: "Verdana";
+  font-family: 'Verdana';
   font-weight: 900;
 }
 
