--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@
 
 .newspaper {
   background-color: antiquewhite;
-  font-family: 'Times New Roman', Times, serif;
-  font-weight: bold;
+  font-family: Times New Roma, Times, serif;
+  font-weight: 700;
 }
 
 .magazine1 {
@@ -26,7 +26,7 @@
 
 .medium {
   font-size: 20px;
-  padding: 8px;  
+  padding: 8px;
 }
 
 .big {
