--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 .newspaper {
   background-color: antiquewhite;
   font-family: Times New Roma, Times, serif;
-  font-weight: 700;
+  font-weight: bold;
 }
 
 .magazine1 {
