--- a/style.css
+++ b/style.css
@@ -36,16 +36,20 @@
 
 .rotateleft {
   transform: rotate(-5deg);
+  display: inline-block
 }
 
 .rotateright {
   transform: rotate(5deg);
+  display: inline-block
 }
 
 .skewright {
   transform: skewX(-10deg);
+  display: inline-block
 }
 
 .skewleft {
   transform: skewX(10deg);
+  display: inline-block
 }
