Project Mistery Letter - ate o requisito 13 menos o 3

--- a/style.css
+++ b/style.css
@@ -22,3 +22,26 @@ header {
   font-family: Verdana;
   font-weight: 900;
 }
+
+.medium {
+  font-size: 20px;
+  padding: 8px;
+}
+
+.big {
+  font-size: 30px;
+  padding: 10px;
+}
+
+.reallybig {
+  font-size: 40px;
+  padding: 15px;
+}
+
+.rotateleft {
+  transform: rotate(-5deg);
+}
+
+.rotateright {
+  transform: rotate(5deg);
+}
