--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ header {
 .newspaper {
   background-color: antiquewhite;
   font-family: 'Times New Roman', Times, serif;
-  font-weight: bold 1px;
+  font-weight: 700;
 }
 
 .magazine1 {
