--- a/style.css
+++ b/style.css
@@ -40,11 +40,11 @@
 }
 
 .rotateleft {
-  transform: matrix(0.996195, -0.0871557, 0.0871557, 0.996195, 0, 0);
+  transform: rotate(-5deg);
 }
 
 .rotateright {
-  transform: matrix(0.996195, 0.0871557, -0.0871557, 0.996195, 0, 0);
+  transform: rotate(5deg);
 }
 
 .skewleft {
