--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
   margin: 0;
 }
 
+body {
+  background-color: gray;
+}
+
 .newspaper {
   background-color: antiquewhite;
   font-family: Times New Roman, Times, serif;
