--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+.newspaper {
+    background-color: antiquewhite;
+    font-family: 'Times New Roman';
+    font-weight: bold;
+}
+
 .magazine1 {
     background-color: teal;
     color: white;
@@ -29,18 +35,18 @@
 }
 
 .rotateleft {
-    transform: rotate(-5deg); /*"matrix(0.996195, -0.0871557, 0.0871557, 0.996195, 0, 0)"
-    */
+    transform: rotate(-5deg); /* "matrix(0.996195, -0.0871557, 0.0871557, 0.996195, 0, 0)"
+     */
 }
 
 .rotateright {
-    transform: rotate(5deg); /*"matrix(0.996195, 0.0871557, -0.0871557, 0.996195, 0, 0)"*/
+    transform: rotate(5deg); /* "matrix(0.996195, 0.0871557, -0.0871557, 0.996195, 0, 0)" */
 }
 
 .skewleft {
-    transform: skewX(10deg); /*"matrix(1, 0, 0.176327, 1, 0, 0)"*/
+    transform: skewX(10deg); /* "matrix(1, 0, 0.176327, 1, 0, 0)" */
 }
 
 .skewright {
-    transform: skewX(-10deg); /*"matrix(1, 0, -0.176327, 1, 0, 0)"*/
+    transform: skewX(-10deg); /* "matrix(1, 0, -0.176327, 1, 0, 0)" */
 }
