--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 .newspaper {
   background-color: antiquewhite;
-  font-family: 'Times New Roman';
-  font-weight: bold;
+  font-family: Times New Roman, sans-serif;
+  font-weight: 900;
 }
 
 .magazine1 {
   background-color: teal;
   color: white;
-  font-family: Verdana;
+  font-family: Verdana, sans-serif;
   font-weight: 900;
   text-transform: uppercase;
 }
@@ -15,7 +15,7 @@
 .magazine2 {
   background-image: url('images/pink-pattern.png');
   color: fuchsia;
-  font-family: Verdana;
+  font-family: Verdana, sans-serif;
   font-weight: 900;
 }
 
@@ -57,7 +57,7 @@
 body {
   background-color: rgb(230, 230, 230);
   text-align: center;
-  font-family: 'Trebuchet MS', sans-serif;
+  font-family: Trebuchet MS, sans-serif;
 }
 
 #carta-gerada {
