--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 }
 
 .magazine2 {
-  background-image: 'images/pink-pattern.png';
+  background-image: url('images/pink-pattern.png');
   color: fuchsia;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-weight: 900;
@@ -39,14 +39,18 @@
 }
 
 .rotateleft {
-  transform: matrix(0.996, -0.087, 0.087, 0.996, 0, 0);
+  transform: matrix(0.996195, -0.0871557, 0.0871557, 0.996195, 0, 0);
+}
+
+.rotateright {
+  transform: matrix(0.996195, 0.0871557, -0.0871557, 0.996195, 0, 0);
 }
 
 .skewleft {
-  transform: matrix(1, 0, 0.176, 1, 0, 0);
+  transform: matrix(1, 0, 0.176327, 1, 0, 0);
 }
 
 .skewright {
-  transform: matrix(1, 0, -0.176, 1, 0, 0);
+  transform: matrix(1, 0, -0.176327, 1, 0, 0);
 }
 
